<resources>
    <string name="app_name">TipCalculator</string>
    <string name="cos" >Cost of Service</string>
    <string name="cosText">How was the service?</string>
    <string name="radio1">Amazing (20%)</string>
    <string name="radio2">Good (15%)</string>
    <string name="radio3">Ok (10%)</string>
    <string name="calculate">Calculate Tip</string>
    <string name="tip">Tip Amount</string>
    <string name="roundOff">Round Off</string>
    <string name="dollerSymbol">$</string>
    <string name="service">Service symbol</string>
    <string name="roundOffSymbol">RoundOff</string>
    <string name="calculateSymbol">Calculate Now</string>
</resources>