<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/cos"
            android:inputType="numberDecimal"
            android:ems="7"
            android:contentDescription="@string/cos"
            android:id="@+id/cos"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/cosText"
            android:labelFor="@id/cosText"
            android:fontFamily="monospace"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:contentDescription="@string/cosText"
            android:layout_height="wrap_content" android:id="@+id/cosText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cos"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3" app:layout_constraintGuide_begin="100dp"
                                                android:orientation="horizontal"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintStart_toStartOf="parent">

        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:text="@string/radio1"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     android:id="@+id/radio1"


        />
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:text="@string/radio2"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     android:id="@+id/radio2"

        />
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:text="@string/radio3"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     android:id="@+id/radio3"

        />
    </RadioGroup>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline4" app:layout_constraintGuide_begin="275dp"
                                                android:orientation="horizontal"/>
    <androidx.appcompat.widget.SwitchCompat
            android:text="@string/roundOff"
            android:layout_width="wrap_content"
            android:checked="true"
            android:layout_height="wrap_content" android:id="@+id/roundOff"

            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/guideline4"/>
    <Button
            android:text="@string/calculate"
            android:textStyle="bold"
            android:layout_width="180dp"
            android:layout_height="wrap_content" android:id="@+id/calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437" app:layout_constraintTop_toBottomOf="@+id/roundOff"/>
    <TextView
            android:text="@string/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tip"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/calculate"/>


</androidx.constraintlayout.widget.ConstraintLayout>